feat: use-cookies hook

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format:fix": "prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
     "@emotion/react": "11.11.0",
@@ -20,6 +21,7 @@
     "eslint-config-next": "13.4.1",
     "js-cookie": "3.0.5",
     "next": "13.4.1",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
