--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "eslint-config-next": "13.4.1",
     "js-cookie": "3.0.5",
     "next": "13.4.1",
-    "prettier": "^2.8.8",
+    "next-translate-plugin": "^2.0.5",
+    "prettier": "2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "3.0.3"
   }
 }
